@@ -3,7 +3,8 @@ Section: utils
 Priority: optional
 Maintainer: GNU/kFreeBSD Maintainers <debian-bsd@lists.debian.org>
 Uploaders: Aurelien Jarno <aurel32@debian.org>, Guillem Jover <guillem@debian.org>
-Build-Depends: debhelper (>= 7), libedit-dev, libbsd-dev, libc0.1-dev (>= 2.10.1) [kfreebsd-any]
+Build-Depends: dpkg-dev (>= 1.15.7), debhelper (>= 7), libbsd-dev, libedit-dev,
+ libc0.1-dev (>= 2.10.1) [kfreebsd-any]
 Vcs-Browser: http://svn.debian.org/wsvn/glibc-bsd/trunk/ufsutils/
 Vcs-Svn: svn://svn.debian.org/glibc-bsd/trunk/ufsutils/
 Standards-Version: 3.9.2
