@@ -24,6 +24,8 @@ ufsutils (7.3-2) UNRELEASED; urgency=low
   * Update CVS to Subversion reference to upstream source code in
     debian/copyright.
   * Remove unused lib variable from debian/rules.
+  * Use dpkg-buildflags to set CPPFLAGS, CFLAGS and LDFLAGS.
+    Based on a patch by Peter Pentchev.
 
   [ Peter Pentchev ]
   * Remove duplicate section “utils” from ufsutils binary package.
